RESOLVED FIXED31184
Geolocation error code UNKNOWN_ERROR is deprecated
https://bugs.webkit.org/show_bug.cgi?id=31184
Summary Geolocation error code UNKNOWN_ERROR is deprecated
Steve Block
Reported 2009-11-05 13:36:15 PST
The error code UNKNOWN_ERROR has been dropped from the spec. See 'RESOLUTION: Drop UNKNOWN_ERROR' in the recent meeting minutes at http://www.w3.org/2009/11/02-geolocation-minutes.html.
Attachments
Patch 1 for Bug 31184 (17.14 KB, patch)
2009-11-05 14:12 PST, Steve Block
eric: review+
Patch 2 for Bug 31184 (19.43 KB, patch)
2009-11-06 11:12 PST, Steve Block
no flags
Steve Block
Comment 1 2009-11-05 14:12:27 PST
Created attachment 42595 [details] Patch 1 for Bug 31184 This patch removes UNKNOWN_ERROR from the PositionError class. It also removes the constant from the JS PositionError object.
Eric Seidel (no email)
Comment 2 2009-11-05 15:22:10 PST
Comment on attachment 42595 [details] Patch 1 for Bug 31184 LGTM.
Steve Block
Comment 3 2009-11-05 16:33:03 PST
Just realized that we shouldn't submit this until Bug 28276 is fixed. Eric, could you take a look at my patch for that one please?
Steve Block
Comment 4 2009-11-06 11:12:56 PST
Created attachment 42661 [details] Patch 2 for Bug 31184 Updated patch now that Bug 28276 is fixed.
Eric Seidel (no email)
Comment 5 2009-11-06 13:16:03 PST
Comment on attachment 42661 [details] Patch 2 for Bug 31184 Still LGTM.
WebKit Commit Bot
Comment 6 2009-11-06 13:36:40 PST
Comment on attachment 42661 [details] Patch 2 for Bug 31184 Clearing flags on attachment: 42661 Committed r50605: <http://trac.webkit.org/changeset/50605>
WebKit Commit Bot
Comment 7 2009-11-06 13:36:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.