LayoutTests/fast/dom/Geolocation/resources/permission-denied-stops-watches.js
@@ -20,10 +20,6 @@ navigator.geolocation.watchPosition(function(p) {
     error = e
     shouldBe('error.code', 'error.PERMISSION_DENIED');
     shouldBe('error.message', '"User denied Geolocation"');
-    shouldBe('error.UNKNOWN_ERROR', '0');
-    shouldBe('error.PERMISSION_DENIED', '1');
-    shouldBe('error.POSITION_UNAVAILABLE', '2');
-    shouldBe('error.TIMEOUT', '3');
 
     // Update the mock Geolocation service to report a new position, then
     // yield to allow a chance for the success callback to be invoked.
