LayoutTests/fast/dom/Geolocation/resources/permission-denied.js
@@ -11,10 +11,6 @@ navigator.geolocation.getCurrentPosition(function(p) {
     error = e
     shouldBe('error.code', 'error.PERMISSION_DENIED');
     shouldBe('error.message', '"User denied Geolocation"');
-    shouldBe('error.UNKNOWN_ERROR', '0');
-    shouldBe('error.PERMISSION_DENIED', '1');
-    shouldBe('error.POSITION_UNAVAILABLE', '2');
-    shouldBe('error.TIMEOUT', '3');
     debug('<br /><span class="pass">TEST COMPLETE</span>');
     window.layoutTestController.notifyDone();
 });
