LayoutTests/fast/dom/Geolocation/resources/reentrant-error.js
@@ -20,10 +20,6 @@ navigator.geolocation.getCurrentPosition(function(p) {
     error = e;
     shouldBe('error.code', 'mockCode');
     shouldBe('error.message', 'mockMessage');
-    shouldBe('error.UNKNOWN_ERROR', '0');
-    shouldBe('error.PERMISSION_DENIED', '1');
-    shouldBe('error.POSITION_UNAVAILABLE', '2');
-    shouldBe('error.TIMEOUT', '3');
     debug('');
     continueTest();
 });
@@ -41,10 +37,6 @@ function continueTest() {
         error = e;
         shouldBe('error.code', 'mockCode');
         shouldBe('error.message', 'mockMessage');
-        shouldBe('error.UNKNOWN_ERROR', '0');
-        shouldBe('error.PERMISSION_DENIED', '1');
-        shouldBe('error.POSITION_UNAVAILABLE', '2');
-        shouldBe('error.TIMEOUT', '3');
         debug('<br /><span class="pass">TEST COMPLETE</span>');
         window.layoutTestController.notifyDone();
     });
