LayoutTests/fast/dom/Geolocation/resources/timeout-zero.js
@@ -10,10 +10,6 @@ navigator.geolocation.getCurrentPosition(function(p) {
     error = e
     shouldBe('error.code', 'error.TIMEOUT');
     shouldBe('error.message', '"Timeout expired"');
-    shouldBe('error.UNKNOWN_ERROR', '0');
-    shouldBe('error.PERMISSION_DENIED', '1');
-    shouldBe('error.POSITION_UNAVAILABLE', '2');
-    shouldBe('error.TIMEOUT', '3');
     debug('<br /><span class="pass">TEST COMPLETE</span>');
     window.layoutTestController.notifyDone();
 }, {
