LayoutTests/fast/dom/Geolocation/resources/watch.js
@@ -22,10 +22,6 @@ function checkError(e) {
     error = e;
     shouldBe('error.code', 'mockCode');
     shouldBe('error.message', 'mockMessage');
-    shouldBe('error.UNKNOWN_ERROR', '0');
-    shouldBe('error.PERMISSION_DENIED', '1');
-    shouldBe('error.POSITION_UNAVAILABLE', '2');
-    shouldBe('error.TIMEOUT', '3');
     debug('');
 }
 
